# ETHPrague2026

./: .gitmodules  ARCHITECTURE.md  README.md  docker-compose.yml  package-lock.json  setup_swarm.py
.github/workflows/: test.yml
backend/: .env.example  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20260509094231_init/: migration.sql
backend/prisma/migrations/20260509104255_route_and_sensors/: migration.sql
backend/src/: db.ts  index.ts
backend/src/routes/: external.ts  shipments.ts  telemetry.ts
backend/src/services/: arbitrator.ts  external.ts  insights.ts  judge.ts  judgechat.ts  simulator.ts
firmware/: .gitignore  CMakeLists.txt  sdkconfig.defaults
firmware/components/oqs/: CMakeLists.txt
firmware/main/: CMakeLists.txt  auth.c  auth.h  beacon.c  beacon.h  client.c  client.h  idf_component.yml  kms.c  kms.h  main.c  sensor.c  sensor.h  time_sync.c  time_sync.h  wifi.c  wifi.h
firmware/test/: .gitignore  backend_guide.md  backend_kyber_guide.md  backend_verify_reference.js  check_create_key.js  extract_pubkey.js  get_ecdsa_pubkey.js  package.json  server.js  sign_and_recover.js  verify.js
front/: package-lock.json  package.json
front/src/: AlzaCart.css  AlzaCart.jsx  AlzaPayment.css  AlzaPayment.jsx  AmazonCart.css  AmazonCart.jsx  AmazonWallet.css  AmazonWallet.jsx  App.jsx  main.jsx  wagmi.js
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  map-styles.css  page.tsx
frontend/app/devices/: page.tsx
frontend/app/devices/[id]/: page.tsx
frontend/components/: AIInsights.tsx  BreathingDot.tsx  EthLogo.tsx  IntelligenceFeed.tsx  LiveMap.tsx  SensorChart.tsx  ShipmentDashboard.tsx  StatusBadge.tsx  StatusTimeline.tsx
frontend/lib/: api.ts
gigaservice/: .coverage  .env  .env.example  .gitignore  Dockerfile  check_contract.py  device_upload_structure.md  fix_test_paths.py  mail.py  middleware.py  pytest.ini  redm.md  requirements-dev.txt  requirements.txt  server.py
gigaservice/api/: __init__.py  auth.py  dashboard.py  deps.py  packages.py  sensors.py  stats.py  trackers.py
gigaservice/config/: roles.json
gigaservice/scripts/: mock_test.py
gigaservice/services/: attestations.py  auth.py  blockchain.py  geo.py  notifications.py
gigaservice/storage/: __init__.py  swarm.py
gigaservice/templates/: alert_email.html
gigaservice/tests/: conftest.py
gigaservice/tests/api/: test_attestations.py  test_auth.py  test_encryption.py  test_packages.py  test_sensors.py  test_server.py  test_stats.py  test_trackers.py
gigaservice/tests/unit/: conftest.py  test_blockchain.py  test_ens.py  test_geo.py  test_rules_engine.py  test_swarm.py
pqc-module/: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
pqc-module/components/mldsa/: CMakeLists.txt  randombytes.h  randombytes_esp32.cpp
pqc-module/components/mlkem/: CMakeLists.txt
pqc-module/components/pqc/: CMakeLists.txt  pqc.cpp
pqc-module/components/pqc/include/: pqc.h
pqc-module/components/pqclean/: CMakeLists.txt  randombytes.h  randombytes_esp32.cpp
pqc-module/main/: CMakeLists.txt  main.cpp
pqc-module/tests/: randombytes_host.c  test_host  test_host.c  test_pqc.py
sdk-qpc-fix/: Makefile  README.md
sdk-qpc-fix/gotee_starter-pedro-qemu/: CLAUDE.md  Makefile  README.md  SECURITY.md  package.json
sdk-qpc-fix/gotee_starter-pedro-qemu/docker/: Cargo.toml  Dockerfile  Makefile
sdk-qpc-fix/gotee_starter-pedro-qemu/docker/gotee_syscall/src/: lib.rs
sdk-qpc-fix/gotee_starter-pedro-qemu/docker/qemu/: Dockerfile  run.sh
sdk-qpc-fix/gotee_starter-pedro-qemu/docker/trusted_os/: bridge.go  go.mod  go.sum  main.go  rpc.go
sdk-qpc-fix/gotee_starter-pedro-qemu/docs/: PORTING_TO_USBARMORY.md
sdk-qpc-fix/gotee_starter-pedro-qemu/examples/attestation/: attestation.test.ts
sdk-qpc-fix/gotee_starter-pedro-qemu/examples/pqc/: pqc.test.ts
sdk-qpc-fix/gotee_starter-pedro-qemu/examples/square/: README.md  server.ts
sdk-qpc-fix/gotee_starter-pedro-qemu/scripts/: make-sd-img.sh  qemu.sh  test-helpers.ts  upload.ts
sdk-qpc-fix/gotee_starter-pedro-qemu/src/: main.rs
sdk-qpc-fix/gotee_starter-pedro-qemu/src/pqc/: mldsa.rs  mlkem.rs  mod.rs
smart-contract/: .example.env  Makefile  README.md  foundry.toml
smart-contract/contracts/: orderContract.sol
smart-contract/scripts/: Deploy.s.sol  TestOnChain.s.sol
smart-contract/test/: ColdChainShipment.t.sol
smart-contract/ts-test/: index.ts  package-lock.json  package.json
wallet-connect/: .gitignore  index.html  package-lock.json  package.json
wallet-connect/src/: App.jsx  constants.js  index.css  main.jsx  wagmi.js
